[package]
name = "zu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.3.0"
logos = "0.13.0"
lalrpop-util = { version = "0.20.0", default-features = false, features = [
  "lexer",
  "unicode",
] }
clap = { version = "4.2.4", features = ["derive"] }
eyre = "0.6.8"
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.46"
owo-colors = "3.5.0"
textwrap = "0.16.0"
supports-unicode = "2.0.0"
supports-color = "2.0.0"
supports-hyperlinks = "2.1.0"
terminal_size = "0.2.6"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.20.0"
