[package]
name = "zu"
version = "0.0.1"
edition = "2021"
authors = ["Gabrielle Guimarães de Oliveira"]
documentation = "https://github.com/aripiprazole/zu"
license = "MIT"
keywords = ["incremental", "parsing", "zu", "programming-language"]
categories = ["parsing", "compilers", "text-editors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.20.0", default-features = false, features = [
  "lexer",
  "unicode",
] }
clap = { version = "4.2.4", features = ["derive"] }
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.46"
bupropion = "0.0.6"
intmap = "2.0.0"
im-rc = "15.1.0"
fxhash = "0.2.1"
lazy_static = "1.4.0"
crossbeam-channel = "0.5.8"
log = "0.4.20"
fern = "0.6.2"
humantime = "2.1.0"
logos = "0.13.0"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.20.0"
